[project]
name = "crud01"
version = "0.1.0"
description = ""
authors = [
    {name = "santannajp",email = "sanannajp@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "sqlmodel (>=0.0.38,<0.0.39)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
